crates/top/re_viewer/tests/snapshots/all_component_fallbacks__arch_fallback_rerun.archetypes.GeoPoints.snap
---
source: crates/top/re_viewer/tests/all_component_fallbacks.rs
expression: arch_display
---
positions: [[0.0, 0.0]]
radii: [-5.0]
colors: [3161148927]
class_ids: [0]
